Gulp and SCSS setup

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE HTML>
-<HTML>
-<HEAD>
-    <TITLE>We are XXV</TITLE>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css"></link>
-</HEAD>
+<!doctype html>
+<html>
 
-<BODY>
-    <h1>We are XXV</h1>
-    <p>Coming Soon.</p>
-</BODY>
-</HTML>
+    <head>
+        <title>We are XXV</title>
+        <link rel="stylesheet" type="text/css" href="stylesheets/css/style.css"></link>
+    </head>
+
+    <body>
+        <h1>We are XXV</h1>
+        <p>Coming Soon.</p>
+    </body>
+
+</html>
